@@ -1,3 +1,9 @@
+Fri Aug 15 00:32:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	  - Connecting to an account, disconnecting, and then connecting to
+	    any account no longer crashes.
+
 Thu Aug 14 03:04:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountsWindow.cpp:
